# runebender-web

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-app.sh  vite.config.ts
assets/test-fonts/: VirtuaGrotesk.designspace
assets/test-fonts/VirtuaGrotesk-Bold.ufo/: fontinfo.plist  lib.plist
assets/test-fonts/VirtuaGrotesk-Bold.ufo/glyphs/: A_acute.glif  A_breve.glif  A_circumflex.glif  A_dieresis.glif  A_grave.glif  A_macron.glif  A_ogonek.glif  A_ring.glif  A_tilde.glif  C_acute.glif  C_cedilla.glif  C_dotaccent.glif  D_caron.glif  E_000.glif  E_010.glif  E_013.glif  E_acute.glif  E_caron.glif  E_circumflex.glif  E_dieresis.glif  E_dotaccent.glif  E_grave.glif  E_macron.glif  E_ogonek.glif  F_002.glif  G_breve.glif  G_commaaccent.glif  G_dotaccent.glif  I_acute.glif  I_circumflex.glif  I_dieresis.glif  I_dotaccent.glif  I_grave.glif  I_macron.glif  I_ogonek.glif  J_.glif  K_commaaccent.glif  L_acute.glif  L_caron.glif  L_commaaccent.glif  (+403 more)
assets/test-fonts/VirtuaGrotesk-Regular.ufo/: features.fea  fontinfo.plist  kerning.plist  lib.plist
assets/test-fonts/VirtuaGrotesk-Regular.ufo/glyphs/: A_E.glif  A_acute.glif  A_breve.glif  A_circumflex.glif  A_dieresis.glif  A_grave.glif  A_macron.glif  A_ogonek.glif  A_ring.glif  A_tilde.glif  C_caron.glif  D_caron.glif  D_croat.glif  E_012.glif  E_014.glif  E_017.glif  E_021.glif  E_acute.glif  E_caron.glif  E_circumflex.glif  E_dieresis.glif  E_dotaccent.glif  E_grave.glif  E_macron.glif  E_ogonek.glif  E_th.glif  F_003.glif  G_breve.glif  G_commaaccent.glif  G_dotaccent.glif  G_ermandbls.glif  H_bar.glif  I_acute.glif  I_circumflex.glif  I_dieresis.glif  I_dotaccent.glif  I_grave.glif  I_macron.glif  I_ogonek.glif  J_.glif  (+431 more)
core/: Cargo.toml  deny.toml
core/src/: curve.rs  editor.rs  hud_text.rs  image_trace.rs  lib.rs  measure.rs  renderer.rs  text.rs  tool.rs  wasm_api.rs
core/src/editing/: compat.rs  hit_test.rs  mod.rs  mouse.rs  viewport.rs
core/src/model/: glyph_renderer.rs  mod.rs  workspace.rs
core/src/path/: cubic.rs  hyper.rs  mod.rs  point.rs  point_list.rs  quadrant.rs  quadratic.rs  segment.rs
scripts/: generate-gf-sidebar-data.mjs  update-demo-font.sh
server/: serve.mjs
src/: Runebender.vue  devTestFont.ts  gfSidebarData.generated.ts  glyphSidebarData.ts  main.ts  themeTokens.ts
src/components/: AnchorPanel.vue  CategorySidebar.vue  CoordinatePanel.vue  CurvePanel.vue  EditModeToolbar.vue  GeneratedIcon.vue  GlyphAnatomyPanel.vue  GlyphCell.vue  GlyphInfoSidebar.vue  HelperPanel.vue  MarkColorPanel.vue  MasterToolbar.vue  SelectPanel.vue  ShapesToolbar.vue  SketchPanel.vue  SystemToolbar.vue  TextDirectionToolbar.vue  TopBar.vue  TransformPanel.vue  WelcomePanel.vue  WorkspaceToolbar.vue  generatedToolbarIcons.ts  markColors.ts  toolIds.ts
src/host/: runebenderHost.ts
src/hosts/browser/: browserHost.ts
src/hosts/local/: localHost.ts
wasm/: README.md  package.json  runebender_web.d.ts  runebender_web.js  runebender_web_bg.wasm  runebender_web_bg.wasm.d.ts
