[package]
name = "runebender-web"
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-or-later"
description = "WASM core for the Runebender web editor — ported from runebender-xilem"
repository = "https://github.com/eliheuer/runebender-web"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Shared kurbo-free types with runebender-xilem.
runebender-core = { path = "../../runebender-core" }

# Geometry (Linebender). Matches runebender-xilem's kurbo version so
# types graft without translation.
kurbo = "0.13"
# Boolean ops depend on linesweeper, which is pinned to kurbo 0.12.
kurbo_012 = { package = "kurbo", version = "0.12" }
# spline solves on kurbo 0.9; we keep both versions side by side and
# convert points at the boundary, exactly as runebender-xilem does.
kurbo_09 = { package = "kurbo", version = "0.9.5" }
spline = { git = "https://github.com/linebender/spline" }

# Serialization (used by glyph data types).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UFO parsing (Linebender) — same library runebender-xilem uses.
norad = "0.13"

# Browser-safe bitmap glyph tracing. Sourced from the public GitHub repo
# (default branch) so anyone can build this crate without a local sibling
# checkout. Cargo.lock pins the exact resolved commit for reproducible
# builds; run `cargo update -p img2bez` to pull the latest. Keep default
# features off so WASM does not pull in the CLI, UFO writer, rayon, or
# raster-comparison tooling.
img2bez = { git = "https://github.com/eliheuer/img2bez", default-features = false }

# plist parser — already pulled in transitively by norad, listed
# directly so we can call plist::from_bytes for fontinfo.plist
# (norad's FontInfo::from_file is pub(crate)).
plist = "1"

# WASM bindings.
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

# Render path (Wave 3). Vello re-exports wgpu and peniko, so we reach
# those through vello rather than depending on them directly.
vello = "0.8"
linesweeper = "0.2"

# On-canvas shaped text (HUD measurement labels, future proofing).
# parley 0.8 aligns with vello 0.8's font stack (skrifa 0.40, peniko 0.6,
# read-fonts 0.37 via fontique 0.8) so no duplicate font crates are built.
# `system` (default) pulls OS font-enumeration backends that don't build on
# wasm — we disable it and register embedded font bytes into the FontContext.
parley = { version = "0.8", default-features = false, features = ["std"] }

# Enable WebGPU canvas surface support for wasm32 targets. Vello pulls
# in wgpu but with default-features off and no `webgpu`, so the
# `HtmlCanvasElement → SurfaceTarget` impl isn't available unless we
# add it ourselves. Native targets don't need this.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "28", default-features = false, features = ["webgpu", "wgsl"] }
# uuid (pulled in transitively by norad) needs its `js` feature on
# wasm32 to source randomness from js-sys.
uuid = { version = "1", features = ["js"] }

# Async runtime for WebGPU init (only used in WASM builds, but keeping
# it unconditional lets `cargo test` build cleanly without target
# gating noise).
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",
    "console",
]

[profile.release]
# Speed over size: Vello scene encoding and kurbo path math are hot
# CPU loops at 60fps.
opt-level = 3
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
# Default is ["-O"], which is wasm-opt level 1. Bump to -O3 to match
# the Rust-side opt-level 3 and squeeze more out of the wasm binary.
wasm-opt = ["-O3"]

# Linebender canonical lint set (https://linebender.org/wiki/canonical-lints/).
# Heavy lints (missing_docs, unreachable_pub, …) are warned here and deferred
# via #![allow(...)] in lib.rs until the crate-wide cleanup lands.
# `unsafe_code = "forbid"` is intentionally omitted: wasm-bindgen expands
# `unsafe` into this crate, which a forbid would reject.
[lints.clippy]
# allow_attributes / allow_attributes_without_reason are part of the canonical
# set but deferred: they require a reason on every #[allow], which is bound up
# with the pending #[allow(dead_code)] triage.
cast_possible_truncation = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
doc_markdown = "warn"
exhaustive_enums = "warn"
fn_to_numeric_cast_any = "forbid"
match_same_arms = "warn"
missing_assert_message = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
partial_pub_fields = "warn"
return_self_not_must_use = "warn"
semicolon_if_nothing_returned = "warn"
shadow_unrelated = "warn"
should_panic_without_expect = "warn"
todo = "warn"
trivially_copy_pass_by_ref = "warn"
unseparated_literal_suffix = "warn"
use_self = "warn"
wildcard_imports = "warn"

[lints.rust]
elided_lifetimes_in_paths = "warn"
let_underscore_drop = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
single_use_lifetimes = "warn"
trivial_numeric_casts = "warn"
unnameable_types = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"
